asm_tests/other_testfiles/invalid_files/error45.s
.name "MORO"
.comment "MORJESTA!"

kissa:

	live %:kissaa
